<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".activities.ChannelCreate">


    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"

        android:background="@drawable/content_layout_backg"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                tools:src="@tools:sample/avatars" />

            <Button
                android:id="@+id/btnChannelImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:text="Add Image" />
        </LinearLayout>

        <EditText
            android:id="@+id/txtChannelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edit_text_backg"
            android:hint="@string/hintChannelName"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/txtChannelDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="30dp"

            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_backg"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:gravity="start|top"
            android:hint="@string/hintChannelDesc"
            android:inputType="textMultiLine"
            android:padding="10dp" />


        <Button
            android:id="@+id/btnCreateNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:backgroundTint="@color/color_1"
            android:textColor="@color/color_white"
            android:text="@string/createChannel" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>