...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_card"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/channelsRecyclerView"
            android:background="@drawable/content_layout_backg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:scrollbars="vertical"
...
        </androidx.recyclerview.widget.RecyclerView>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/txtEmpty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/color_white"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:textSize="25dp"
        android:text="You are not yet part of any channels. Create or Join some! :)"
        app:layout_constraintBottom_toBottomOf="@+id/swiperefresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_card" />


...
